[gd_scene load_steps=2 format=3 uid="uid://dw2d7p2xrxf8q"]

[ext_resource type="Script" path="res://scenes/InterviewScene.gd" id="1_2xvq8"]

[node name="InterviewScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2xvq8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.15, 0.15, 0.2, 1)

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="Title" type="Label" parent="MainContainer"]
layout_mode = 2
text = "Character Interview"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="ProgressLabel" type="Label" parent="MainContainer/ProgressContainer"]
layout_mode = 2
text = "0 / 10 questions"

[node name="ProgressBar" type="ProgressBar" parent="MainContainer/ProgressContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 10.0

[node name="Spacer1" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="QuestionContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestionLabel" type="Label" parent="MainContainer/QuestionContainer"]
layout_mode = 2
text = "Question will appear here"
autowrap_mode = 3
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="AnswersContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3